<resources>
    <string name="app_name">SouGov_ConstraintLayout</string>

    <string name="logo_sou">SOU</string>
    <string name="logo_gov_br">gov.br</string>
    <string name="servidor">Servidor(a)</string>

    <string name="vinculo">Vínculo (Órgão – Uorg – Matrícula)</string>
    <string name="dados_pessoais">PF – UORG 12045 – 1845723</string>
    <string name="cargo">Cargo</string>
    <string name="nome_cargo">Perito Criminal Federal – Área: Informática Forense</string>

    <string name="contracheque">Contracheque | Março 2026</string>
    <string name="resumo_contracheque">Resumo do último contracheque</string>
    <string name="meus_contracheques">Meus Contracheques</string>

    <string name="seta">›</string>
    
    <string name="bruto">Bruto</string>
    <string name="valor_numerico_bruto">30.175,29</string>

    <string name="descontos">Descontos</string>
    <string name="valor_numerico_descontos">9.570,44</string>

    <string name="liquido">Líquido</string>
    <string name="valor_numerico_liquido">20.604,85</string>

    <string name="autoatendimento">Autoatendimento</string>
    <string name="descricao_autoatendimento">Aqui você tem a informação a hora que quiser!</string>
    <string name="consulta_contracheque">Consulta\nContracheque</string>
    <string name="declaracoes_automaticas">Declarações\nAutomáticas</string>
    <string name="simulador_aposetadoria">Simulador de\nAposentadoria</string>
    <string name="novo">novo</string>

    <string name="solicitacoes">Solicitações</string>
    <string name="descricao_solicitacoes">Envie requerimentos para sua Unidade Gestora.</string>

    <string name="saude_suplementar">Saúde\nSuplementar</string>
    <string name="cadastro_dependente">Cadastro de\nDependente</string>
    <string name="moradia">Moradia</string>

    <string name="inicio">Início</string>
    <string name="assistente">Assistente</string>
    <string name="perfil">Meu Perfil</string>

</resources>