<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true"
    android:scrollbars="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:background="@color/cor_barra_topo"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

    </View>

    <ImageView
        android:id="@+id/imageButton"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:background="@null"
        android:scaleType="fitCenter"
        android:src="@drawable/menu_tres_linhas"
        app:layout_constraintBottom_toBottomOf="@id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@id/view"
        app:layout_constraintVertical_bias="0.49">

    </ImageView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="61dp"
        android:layout_height="27dp"
        android:layout_marginStart="16dp"
        android:includeFontPadding="false"
        android:text="@string/logo_sou"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"

        app:layout_constraintBottom_toBottomOf="@id/view"
        app:layout_constraintStart_toEndOf="@+id/imageButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.333" />

    <TextView
        android:layout_width="61dp"
        android:layout_height="24dp"
        android:includeFontPadding="false"
        android:text="@string/logo_gov_br"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0">

    </TextView>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="@drawable/forma_oval"
        android:backgroundTint="@color/white"
        android:paddingStart="10dp"
        android:paddingTop="2dp"
        android:paddingEnd="10dp"
        android:paddingBottom="2dp"
        android:text="@string/servidor"
        android:textColor="@color/cor_barra_topo"
        android:textSize="12sp"
        android:textStyle="bold"

        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@id/view"
        app:layout_constraintVertical_bias="0.576">

    </TextView>

    <ImageView
        android:id="@+id/imageView27"
        android:layout_width="32dp"
        android:layout_height="32dp"

        android:layout_marginTop="24dp"
        android:src="@drawable/sino"
        app:layout_constraintEnd_toStartOf="@+id/imageView17"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageView32"
        app:layout_constraintTop_toTopOf="@id/view">

    </ImageView>

    <ImageView
        android:id="@+id/imageView28"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/saida"
        app:layout_constraintEnd_toEndOf="@id/view"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageView17"
        app:layout_constraintTop_toTopOf="@id/view">

    </ImageView>

    <ImageView
        android:id="@+id/imageView32"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="24dp"
        android:background="@null"

        android:scaleType="fitCenter"
        android:src="@drawable/switch_modo_escuro"
        app:layout_constraintEnd_toStartOf="@+id/imageView27"
        app:layout_constraintHorizontal_bias="0.97"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@id/view"
        app:layout_constraintTop_toTopOf="@id/view">

    </ImageView>

    <ImageView
        android:id="@+id/imageView17"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="24dp"

        android:src="@drawable/cadeado"
        app:layout_constraintEnd_toStartOf="@+id/imageView28"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageView27"
        app:layout_constraintTop_toTopOf="parent">

    </ImageView>

        <View
            android:id="@+id/view4"
            android:layout_width="0dp"
            android:layout_height="350dp"
            android:background="@color/cor_fundo_contracheque"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view">


        </View>

        <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_marginTop="88dp"
        android:background="@drawable/banner_arredondado"
        android:backgroundTint="@color/cor_banner"
        android:paddingStart="5dp"
        android:paddingTop="3dp"
        android:paddingEnd="5dp"


        android:paddingBottom="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.90">

    </View>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"

        android:layout_marginStart="10dp"
        android:layout_marginTop="12dp"

        android:text="@string/vinculo"
        android:textColor="@color/cor_barra_topo"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toTopOf="@+id/view2">

    </TextView>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dados_pessoais"
        android:textColor="@color/cor_padrao_textos"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7">

    </TextView>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="8dp"
        android:text="@string/cargo"

        android:textColor="@color/cor_barra_topo"


        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/nome_cargo"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginBottom="12dp"
        android:textColor="@color/cor_padrao_textos">

    </TextView>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/contracheque"
        android:textColor="@color/cor_padrao_textos"
        android:textSize="18dp"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toBottomOf="@+id/view2"
        android:textStyle="bold">

    </TextView>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/resumo_contracheque"

        android:textColor="@color/cor_padrao_textos"
        android:textSize="14sp"

        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

    </TextView>

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/olho"

            app:layout_constraintEnd_toEndOf="@+id/view2"
            app:layout_constraintHorizontal_bias="0.986"
            app:layout_constraintStart_toEndOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/view2">

        </ImageView>



        <View
            android:id="@+id/view21"
            android:layout_width="0dp"
            android:layout_height="65dp"

            android:layout_marginBottom="60dp"

            android:background="@drawable/banner_com_contorno"

            app:layout_constraintBottom_toBottomOf="@+id/view4"
            app:layout_constraintEnd_toStartOf="@+id/view22"

            app:layout_constraintHorizontal_chainStyle="packed"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_percent="0.3">

        </View>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="10dp"
            android:text="@string/bruto"
            android:textColor="@color/cor_padrao_textos"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/view21"
            app:layout_constraintTop_toTopOf="@+id/view21">

        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="6dp"
            android:layout_marginBottom="11dp"
            android:text="@string/valor_numerico_bruto"
            android:textColor="@color/linha_verde"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/view21"
            app:layout_constraintEnd_toStartOf="@+id/imageView"
            android:textSize="13sp">

        </TextView>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginBottom="11dp"
            android:src="@drawable/mais_verde"
            app:layout_constraintBottom_toBottomOf="@+id/view21"
            app:layout_constraintEnd_toEndOf="@+id/textView6">

        </ImageView>

        <View
            android:id="@+id/view22"
            android:layout_width="0dp"
            android:layout_height="65dp"

            android:layout_marginBottom="60dp"

            android:layout_marginEnd="4dp"
            android:layout_marginStart="4dp"

            android:background="@drawable/banner_arredondado"

            android:backgroundTint="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/view4"
            app:layout_constraintEnd_toStartOf="@+id/view23"
            app:layout_constraintStart_toEndOf="@+id/view21"
            app:layout_constraintWidth_percent="0.33">

        </View>

        <View
            android:id="@+id/view23"
            android:layout_width="0dp"
            android:layout_height="65dp"

            android:layout_marginBottom="60dp"

            android:background="@drawable/banner_arredondado"

            android:backgroundTint="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/view4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/view22"
            app:layout_constraintWidth_percent="0.3">

        </View>

        <!--Linhas-->
        <!--Verde-->
        <View
            android:id="@+id/view33"
            android:layout_width="5dp"
            android:layout_height="0dp"
            android:background="@drawable/linha_colorida"
            android:backgroundTint="@color/linha_verde"
            app:layout_constraintBottom_toBottomOf="@+id/view21"
            app:layout_constraintStart_toStartOf="@+id/view21"
            app:layout_constraintTop_toTopOf="@+id/view21">

        </View>

    <!--Vermelha-->
    <View
        android:layout_width="5dp"
        android:layout_height="0dp"
        android:background="@drawable/linha_colorida"
        android:backgroundTint="@color/linha_vermelha"
        app:layout_constraintBottom_toBottomOf="@+id/view22"
        app:layout_constraintStart_toStartOf="@+id/view22"
        app:layout_constraintTop_toTopOf="@+id/view22">

    </View>

    <!--Azul-->
    <View
        android:layout_width="5dp"
        android:layout_height="0dp"
        android:background="@drawable/linha_colorida"
        android:backgroundTint="@color/linha_azul"
        app:layout_constraintBottom_toBottomOf="@+id/view23"
        app:layout_constraintStart_toStartOf="@+id/view23"
        app:layout_constraintTop_toTopOf="@+id/view23">

    </View>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
